# samantha

./: .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
samantha/: __init__.py  __version__.py  cli.py  config.py  logging_setup.py  server.py  version.py
samantha/audio/: __init__.py  playback.py  processing.py  recording.py
samantha/config/: __init__.py  constants.py  profiles.py  settings.py
samantha/core/: __init__.py  loop.py  state.py
samantha/injection/: __init__.py  clipboard.py  detection.py  inject.py
samantha/prompts/: __init__.py  services.py
samantha/resources/: __init__.py
samantha/services/: __init__.py  health.py
samantha/speech/: __init__.py  stt.py
samantha/tools/: __init__.py  samantha_mode.py  samantha_tools.py
samantha/utils/: __init__.py  logging.py  text.py
tests/: test_loop_device_refresh.py
